--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -55,17 +55,22 @@
 
       <div class="card-bottom mdl-card__actions mdl-card--border mdl-shadow--2dp">
         <div class="icons">
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" data-name="k.wojtczyk" data-domain="gmail" data-tld="com" href="#" class="cryptedmail" onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld" title="Email">
-            <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://www.instagram.com/kwojtczyk/" title="Instagram">
+            <i class="fa fa-fw fa-instagram" aria-hidden="true"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/KamilWojtczyk" title="Twitter">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/kamwojt" title="Twitter">
             <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
+          </a>
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/K0ff33" title="Github">
+            <i class="fa fa-fw fa-github" aria-hidden="true"></i>
           </a>
           <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://www.linkedin.com/in/kwojtczyk" title="LinkedIn">
             <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/K0ff33" title="Github">
-            <i class="fa fa-fw fa-github" aria-hidden="true"></i>
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" data-name="k.wojtczyk" data-domain="gmail" data-tld="com"
+            href="#" class="cryptedmail" onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld"
+            title="Email">
+            <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
           </a>
         </div>
       </div>
