💄 Open mail icon

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -70,7 +70,7 @@
           <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" data-name="k.wojtczyk" data-domain="gmail" data-tld="com"
             href="#" class="cryptedmail" onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld"
             title="Email">
-            <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
+            <i class="fa fa-fw fa-envelope-o" aria-hidden="true"></i>
           </a>
         </div>
       </div>
