💬 Rewritten part of intro text

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -22,17 +22,13 @@
                 </h1>
               </div>
               <div class="sub-slogan">
-                <h2>Full stack developer</h2>
+                <h2>Full-Stack Developer</h2>
               </div>
               <div class="about">
-                <p>I'm a young and passionate programmer, crazy about new technologies, breathtaking views and good IPA
-                  <i class="fa fa-beer"
-                    aria-hidden="true"></i>.</p>
-                <p>I've recently graduated from university and currently work as a full-stack developer, writing code in
-                  <span class="tooltip">modern*
-                    <span class="tooltiptext">ideally!</span>
-                  </span>
-                  &nbsp;languages & frameworks.</p>
+                <p>I'm a passionate software developer, enthusiastic about new technologies, landscape photography and hoppy
+                  IPA. Cheers! 🍻
+                </p>
+                <p>If you are interested in working with me, please drop me a line!</p>
                 <div class="mdl-grid dev-icons">
                   <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">
                     <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
