💬 Updated Twitter link

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -54,7 +54,7 @@
           <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://www.instagram.com/kwojtczyk/" title="Instagram">
             <i class="fa fa-fw fa-instagram" aria-hidden="true"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/kamwojt" title="Twitter">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/kamilwojtczyk" title="Twitter">
             <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
           </a>
           <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/K0ff33" title="Github">
